# extern

./: CMakeLists.txt  README.md
glad/include/glad/: gl.h
glad/src/: gl.cpp
